Update to Settings Widget to set data directories

--- a/src/ui/QGCSettingsWidget.ui
+++ b/src/ui/QGCSettingsWidget.ui
@@ -23,108 +23,215 @@
       <attribute name="toolTip">
        <string>General Settings</string>
       </attribute>
-      <layout class="QGridLayout" name="generalPaneGridLayout">
-       <item row="2" column="0">
-        <widget class="QCheckBox" name="lowPowerCheckBox">
-         <property name="toolTip">
-          <string>Lowers all update rates to save battery power</string>
-         </property>
-         <property name="text">
-          <string>Enable low power mode</string>
-         </property>
-        </widget>
-       </item>
-       <item row="5" column="0">
-        <widget class="QRadioButton" name="outdoorStyle">
-         <property name="text">
-          <string>Use outdoor mission style (light background)</string>
-         </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QCheckBox" name="audioMuteCheckBox">
-         <property name="text">
-          <string>Mute all audio output</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../../qgroundcontrol.qrc">
-           <normaloff>:/files/images/status/audio-volume-muted.svg</normaloff>:/files/images/status/audio-volume-muted.svg</iconset>
-         </property>
-        </widget>
-       </item>
-       <item row="6" column="0">
-        <widget class="QRadioButton" name="indoorStyle">
-         <property name="text">
-          <string>Use indoor mission style (black background)</string>
-         </property>
-        </widget>
-       </item>
-       <item row="3" column="0">
-        <widget class="QCheckBox" name="titleBarCheckBox">
-         <property name="text">
-          <string>Show Docked Widget title bars when NOT in advanced Mode.</string>
-         </property>
-         <property name="checked">
-          <bool>false</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="8" column="0">
-        <spacer name="verticalSpacer">
-         <property name="orientation">
-          <enum>Qt::Vertical</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>20</width>
-           <height>40</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item row="1" column="0">
-        <widget class="QCheckBox" name="reconnectCheckBox">
-         <property name="text">
-          <string>Automatically reconnect last link on application startup</string>
-         </property>
-         <property name="icon">
-          <iconset resource="../../qgroundcontrol.qrc">
-           <normaloff>:/files/images/devices/network-wireless.svg</normaloff>:/files/images/devices/network-wireless.svg</iconset>
-         </property>
-        </widget>
-       </item>
-       <item row="4" column="0">
-        <widget class="QRadioButton" name="nativeStyle">
-         <property name="text">
-          <string>Use native platform look and feel (Windows/Linux/Mac OS)</string>
-         </property>
-         <property name="autoExclusive">
-          <bool>true</bool>
-         </property>
-        </widget>
-       </item>
-       <item row="7" column="0">
-        <layout class="QHBoxLayout" name="horizontalLayout">
-         <item>
-          <widget class="QLabel" name="label">
+      <widget class="QCheckBox" name="lowPowerCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>18</x>
+         <y>51</y>
+         <width>164</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="toolTip">
+        <string>Lowers all update rates to save battery power</string>
+       </property>
+       <property name="text">
+        <string>Enable low power mode</string>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="outdoorStyle">
+       <property name="geometry">
+        <rect>
+         <x>18</x>
+         <y>107</y>
+         <width>282</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Use outdoor mission style (light background)</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="audioMuteCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>18</x>
+         <y>9</y>
+         <width>166</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Mute all audio output</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../../qgroundcontrol.qrc">
+         <normaloff>:/files/images/status/audio-volume-muted.svg</normaloff>:/files/images/status/audio-volume-muted.svg</iconset>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="indoorStyle">
+       <property name="geometry">
+        <rect>
+         <x>18</x>
+         <y>124</y>
+         <width>280</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Use indoor mission style (black background)</string>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="titleBarCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>18</x>
+         <y>70</y>
+         <width>381</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Show Docked Widget title bars when NOT in advanced Mode.</string>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QCheckBox" name="reconnectCheckBox">
+       <property name="geometry">
+        <rect>
+         <x>18</x>
+         <y>30</y>
+         <width>357</width>
+         <height>20</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Automatically reconnect last link on application startup</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../../qgroundcontrol.qrc">
+         <normaloff>:/files/images/devices/network-wireless.svg</normaloff>:/files/images/devices/network-wireless.svg</iconset>
+       </property>
+      </widget>
+      <widget class="QRadioButton" name="nativeStyle">
+       <property name="geometry">
+        <rect>
+         <x>18</x>
+         <y>90</y>
+         <width>365</width>
+         <height>18</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Use native platform look and feel (Windows/Linux/Mac OS)</string>
+       </property>
+       <property name="autoExclusive">
+        <bool>true</bool>
+       </property>
+      </widget>
+      <widget class="QGroupBox" name="groupBox">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>150</y>
+         <width>471</width>
+         <height>221</height>
+        </rect>
+       </property>
+       <property name="title">
+        <string>File Locations</string>
+       </property>
+       <widget class="QWidget" name="">
+        <property name="geometry">
+         <rect>
+          <x>10</x>
+          <y>24</y>
+          <width>451</width>
+          <height>191</height>
+         </rect>
+        </property>
+        <layout class="QGridLayout" name="gridLayout">
+         <item row="0" column="0">
+          <widget class="QLabel" name="label_3">
            <property name="text">
-            <string>Log output directory:</string>
+            <string>App Data</string>
            </property>
           </widget>
          </item>
-         <item>
+         <item row="0" column="1">
+          <widget class="QLineEdit" name="appDataDirEdit"/>
+         </item>
+         <item row="0" column="2">
+          <widget class="QPushButton" name="appDirSetButton">
+           <property name="text">
+            <string>Set...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="0">
+          <widget class="QLabel" name="label">
+           <property name="text">
+            <string>Log output:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="1" column="1">
           <widget class="QLineEdit" name="logDirEdit"/>
          </item>
-         <item>
-          <widget class="QPushButton" name="logDirBrowseButton">
+         <item row="1" column="2">
+          <widget class="QPushButton" name="logDirSetButton">
            <property name="text">
-            <string>Browse...</string>
+            <string>Set...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="0">
+          <widget class="QLabel" name="label_2">
+           <property name="text">
+            <string>tlog output:</string>
+           </property>
+          </widget>
+         </item>
+         <item row="2" column="1">
+          <widget class="QLineEdit" name="mavlinkLogDirEdit"/>
+         </item>
+         <item row="2" column="2">
+          <widget class="QPushButton" name="mavlinkDirSetButton">
+           <property name="text">
+            <string>Set...</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="0">
+          <widget class="QLabel" name="label_4">
+           <property name="text">
+            <string>Parameters</string>
+           </property>
+          </widget>
+         </item>
+         <item row="3" column="1">
+          <widget class="QLineEdit" name="paramDirEdit"/>
+         </item>
+         <item row="3" column="2">
+          <widget class="QPushButton" name="paramDirSetButton">
+           <property name="text">
+            <string>Set...</string>
            </property>
           </widget>
          </item>
         </layout>
-       </item>
-      </layout>
+       </widget>
+      </widget>
+      <zorder>groupBox</zorder>
+      <zorder>lowPowerCheckBox</zorder>
+      <zorder>outdoorStyle</zorder>
+      <zorder>audioMuteCheckBox</zorder>
+      <zorder>indoorStyle</zorder>
+      <zorder>titleBarCheckBox</zorder>
+      <zorder>reconnectCheckBox</zorder>
+      <zorder>nativeStyle</zorder>
      </widget>
     </widget>
    </item>
