Addition of "Auto Scroll" in AP2DataPlot, allowing the data to automatically scroll while retaining zoom functionality.

--- a/src/ui/AP2DataPlot2D.ui
+++ b/src/ui/AP2DataPlot2D.ui
@@ -43,6 +43,13 @@
         </widget>
        </item>
        <item>
+        <widget class="QCheckBox" name="autoScrollCheckBox">
+         <property name="text">
+          <string>Auto Scroll With Data</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
