--- a/src/ui/dataselectionscreen.ui
+++ b/src/ui/dataselectionscreen.ui
@@ -15,20 +15,12 @@
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
-    <widget class="QScrollArea" name="scrollArea">
-     <property name="widgetResizable">
-      <bool>true</bool>
-     </property>
-     <widget class="QWidget" name="scrollAreaWidgetContents">
-      <property name="geometry">
-       <rect>
-        <x>0</x>
-        <y>0</y>
-        <width>632</width>
-        <height>383</height>
-       </rect>
+    <widget class="QTreeWidget" name="treeWidget">
+     <column>
+      <property name="text">
+       <string notr="true">1</string>
       </property>
-     </widget>
+     </column>
     </widget>
    </item>
   </layout>
