--- a/src/ui/AP2DataPlot2D.ui
+++ b/src/ui/AP2DataPlot2D.ui
@@ -24,6 +24,13 @@
           <widget class="QWidget" name="widget" native="true">
            <layout class="QVBoxLayout" name="verticalLayout_3">
             <item>
+             <widget class="QLabel" name="logTypeLabel">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item>
              <layout class="QHBoxLayout" name="horizontalLayout_3"/>
             </item>
             <item>
