Fix tool tips background color in Outdoor style-sheet

--- a/files/styles/style-outdoor.css
+++ b/files/styles/style-outdoor.css
@@ -223,7 +223,7 @@ QToolButton:pressed {
 }
 
 QToolTip {
-        background-color: #404040;
+/*        background-color: #404040;*/
 	border-radius: 3px;
 }
 
