--- a/src/ui/map/QGCMapToolBar.ui
+++ b/src/ui/map/QGCMapToolBar.ui
@@ -13,11 +13,20 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1,1,1,1,1,1,5,1,30,1">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1,1,1,1,1,0,0,5,1,30,1">
    <property name="spacing">
     <number>2</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>4</number>
+   </property>
+   <property name="topMargin">
+    <number>4</number>
+   </property>
+   <property name="rightMargin">
+    <number>4</number>
+   </property>
+   <property name="bottomMargin">
     <number>4</number>
    </property>
    <item>
@@ -63,9 +72,38 @@
     </widget>
    </item>
    <item>
-    <widget class="QCheckBox" name="followCheckBox">
+    <spacer name="horizontalSpacer_3">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item>
+    <widget class="QPushButton" name="followPushButton">
+     <property name="toolTip">
+      <string>Centers map on current vehicle location</string>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">QPushButton:checked {
+	background-color: rgb(100, 216, 100);
+
+}
+
+QPushButton:pressed {
+	background-color: rgb(0,255,0);
+}</string>
+     </property>
      <property name="text">
-      <string>Follow</string>
+      <string>Follow Vehicle</string>
+     </property>
+     <property name="checkable">
+      <bool>true</bool>
      </property>
      <property name="checked">
       <bool>true</bool>
