--- a/src/ui/AP2DataPlotAxisDialog.ui
+++ b/src/ui/AP2DataPlotAxisDialog.ui
@@ -23,82 +23,11 @@
     </rect>
    </property>
   </widget>
-  <widget class="QDoubleSpinBox" name="maxDoubleSpinBox">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>20</y>
-     <width>131</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="minimum">
-    <double>-100000.000000000000000</double>
-   </property>
-   <property name="maximum">
-    <double>100000.000000000000000</double>
-   </property>
-  </widget>
-  <widget class="QDoubleSpinBox" name="minDoubleSpinBox">
-   <property name="geometry">
-    <rect>
-     <x>340</x>
-     <y>60</y>
-     <width>131</width>
-     <height>22</height>
-    </rect>
-   </property>
-   <property name="minimum">
-    <double>-100000.000000000000000</double>
-   </property>
-   <property name="maximum">
-    <double>100000.000000000000000</double>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>280</x>
-     <y>30</y>
-     <width>46</width>
-     <height>13</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Maximum</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>280</x>
-     <y>70</y>
-     <width>46</width>
-     <height>13</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Minimum</string>
-   </property>
-  </widget>
-  <widget class="QPushButton" name="setMinMaxPushButton">
-   <property name="geometry">
-    <rect>
-     <x>350</x>
-     <y>90</y>
-     <width>101</width>
-     <height>23</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Set New Min/Max</string>
-   </property>
-  </widget>
   <widget class="QGroupBox" name="groupBox">
    <property name="geometry">
     <rect>
-     <x>490</x>
-     <y>30</y>
+     <x>280</x>
+     <y>10</y>
      <width>131</width>
      <height>201</height>
     </rect>
@@ -169,6 +98,90 @@
     </property>
     <property name="text">
      <string>Group B</string>
+    </property>
+   </widget>
+  </widget>
+  <widget class="QGroupBox" name="minMaxGroupBox">
+   <property name="geometry">
+    <rect>
+     <x>420</x>
+     <y>20</y>
+     <width>231</width>
+     <height>181</height>
+    </rect>
+   </property>
+   <property name="title">
+    <string>GroupBox</string>
+   </property>
+   <widget class="QDoubleSpinBox" name="maxDoubleSpinBox">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>20</y>
+      <width>131</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <double>-100000.000000000000000</double>
+    </property>
+    <property name="maximum">
+     <double>100000.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="setMinMaxPushButton">
+    <property name="geometry">
+     <rect>
+      <x>80</x>
+      <y>90</y>
+      <width>101</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Set New Min/Max</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>46</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Maximum</string>
+    </property>
+   </widget>
+   <widget class="QDoubleSpinBox" name="minDoubleSpinBox">
+    <property name="geometry">
+     <rect>
+      <x>70</x>
+      <y>60</y>
+      <width>131</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="minimum">
+     <double>-100000.000000000000000</double>
+    </property>
+    <property name="maximum">
+     <double>100000.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_2">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>70</y>
+      <width>46</width>
+      <height>13</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Minimum</string>
     </property>
    </widget>
   </widget>
