--- a/src/ui/configuration/ApmHardwareConfig.ui
+++ b/src/ui/configuration/ApmHardwareConfig.ui
@@ -196,7 +196,7 @@
             </size>
            </property>
            <property name="text">
-            <string>Load Params</string>
+            <string>Load Parameters</string>
            </property>
            <property name="checkable">
             <bool>true</bool>
